# asdsl-framework

./: .gitignore  .qcsd_history.json  ASDSL_ARCHITECTURE.md  CHANGELOG_AND_RESULTS.md  CONTRIBUTING.md  LICENSE  README.md  RESULTS.md  append_bindings.py  bench_log.txt  bench_output.txt  bench_output_d2.txt  bench_output_f.txt  bench_output_f2.txt  benchmark_baseline.json  benchmark_config.json  build_log.txt  chat.py  cpp_src.txt  debug.py  debug_np.py  definitive_benchmark_results.txt  diagnostic_profile_f.py  dump.py  err.txt  export_asb_model.py  export_asb_model_sorted.py  export_mmap_model.py  extract_script.py  fix.py  fix_batch.py  fix_fwd.py  fix_native.py  fix_parens.py  fix_patch.py  fix_warm_cache.py  implementation.md  inject_engine.py  kv_part1.cpp  kv_part2.cpp  (+89 more)
asdsl/: __init__.py  calibration_data.py  cli.py  config.py  engine.py  profiler.py  reporting.py  weight_store.py
benchmarks/: E2E_BOTTLENECK_RESEARCH.md  PHASE8_THREADING_WALKTHROUGH.md  PHASE_WALKTHROUGH.md  RESULTS.md  __init__.py  bench_3bit_throughput.py  bench_inference.py  bench_lut.py  bench_quantization.py  build_caches.py  calibrate_imatrix_lite.py  check_cpu_features.py  compare_llama_cpp.py  comprehensive_bench.py  cross_model_suite.py  diagnose_load.py  generate_visuals.py  kernel_bench_compare.py  kernel_preflight.py  measure_dual_stream.py  measure_llama_bytes.py  membw_probe.py  parity_benchmark.py  phase0_audit.py  phase1_thread_sweep.py  phase3_rss_probe.py  phase4_bytes_audit.py  phase5_pld_benchmark.py  phase6_chunk_autotune.py  phase6_stretch_benchmark.py  profile_layer_similarity.py  quick_snr_test.py  run_all.py  speculative_baseline.py  test_c01_g128_correctness.py  test_generate_stream_prefill.py  test_greedy_trajectory.py  test_lmhead_preq2_correctness.py  test_pld_lossless.py  test_preq2_correctness.py  (+9 more)
docs/: architecture.md  final_results.md  inference.md  quantization.md  speculative_decoding.md
evals/: __init__.py  leaderboard_eval.py  lm_eval_harness.py  (+2 more)
(+224 files in other folders)
